<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/title"
            style="@style/title12"
            android:textAlignment="center"
            android:text="@string/teks_title"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/message"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            style="@style/medium12"
            android:text="@string/pesan_yang_di_sampaikan"
            android:textAlignment="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/teks_no"
                android:textColor="@color/dark"
                android:textSize="@dimen/_12sdp"/>

            <Button
                android:id="@+id/yes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/teks_tes"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>