<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:textColor="@color/dark"
            style="@style/title12"
            android:text="@string/title"
            />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/pesan_yang_di_sampaikan"
            style="@style/medium12"
            />

        <Button
            android:id="@+id/ok_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/teks_oke"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>